# test-gdal-proj-bug

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakelists.txt  README.md  hash.cpp  main.cpp  vcpkg.json
src/: coordinate_transform.cpp  coordinate_transform.h  exceptions.h  gdal_inc.h  gdal_manager.cpp  gdal_manager.h  gdaltiler.cpp  gdaltiler.h  geo.h  geotiff_analyzer.cpp  geotiff_analyzer.h  hash.h  platform_utils.cpp  platform_utils.h  system_info.cpp  system_info.h  thumbs.cpp  thumbs.h  tiler.cpp  tiler.h
